Fixing category images not being displayed correctly on iphone

--- a/src/components/category-tile/category-tile.scss
+++ b/src/components/category-tile/category-tile.scss
@@ -79,6 +79,10 @@ category-tile {
 	> img {
 		height: 100%;
 	}
+
+	.sm & img {
+		height: 24.25vw;
+	}
 }
 
 .category-tile-meta {
